Fixed xbox button styles on iOS Safari

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -24,5 +24,6 @@ button {
   -webkit-touch-callout: none; //Removes action panel in iOS Safari
   font-family: "Lato";
   outline: none;
+  padding: 0;
   text-align: center;
 }
